Page Editor: fixed: selected move target has altered bar height to graciously, causing another flicker.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@54693 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-editor/src/main/resources/mgnl-resources/magnolia-templating-editor/css/editor.css
+++ b/magnolia-templating-editor/src/main/resources/mgnl-resources/magnolia-templating-editor/css/editor.css
@@ -410,8 +410,8 @@ div#site-info .mgnlEditorPlaceholder.component .gwt-Label {
 
 /* selected drop target */
 .mgnlEditorBar.component.moveOver {
-  height: 16px;
-  line-height: 15px;
+  height: 17px;
+  line-height: 16px;
 
   padding: 0 1px;
 
